# folly

./: .gitignore  Cargo.toml  README.md
.cargo/: config
Tutorial.inform/: Settings.plist  Tutorial.z8  uuid.txt
Tutorial.inform/Source/: story.ni
encrusted-heart/: Cargo.toml  README.md
encrusted-heart/examples/: term.rs
encrusted-heart/src/: frame.rs  instruction.rs  lib.rs  options.rs  quetzal.rs  traits.rs  zmachine.rs  zscii.rs
encrusted-heart/tests/: czech.z3.regtest  czech.z4.regtest  czech.z5.regtest  czech.z8.regtest  runtests.sh
games/: Folly Tutorial.z8  README.md
src/: dict.rs  keyboard.rs  lib.rs  main.rs
src/rust/: main.remarkable.rs  main.terminal.rs  options.rs  quetzal.rs  traits.rs  ui_terminal.rs  ui_web.rs  zmachine.rs
