[package]
authors = [
    "Sterling DeMille <sterlingdemille+github@gmail.com>",
    "Ben Kirwin <bkirwi@gmail.com>"
]
name = "folly"
version = "0.0.1"
description = "A z-machine for the reMarkable tablet"
repository = "https://github.com/bkirwi/folly"
readme = "README.md"
license = "MIT"
edition = "2021"

[workspace]
members = ["encrusted-heart"]

[dependencies]
base64 = "0.10.1"
encrusted-heart = { path = "encrusted-heart" }
enum_primitive = "0.1.1"
rand = "0.4.2"
serde = "1.0.88"
serde_derive = "1.0.88"
serde_json = "1.0.38"
clap = "2.32.0"
lazy_static = "1.2.0"
regex = "1.1.0"
itertools = "0.10.1"
termion = "1.5.6"
armrest = { git = "https://github.com/bkirwi/armrest", rev = "f814e695ce39756f9a65ef88b332910f92544a3e" }
#armrest = { path = "../armrest" }
libremarkable = { git = "https://github.com/canselcik/libremarkable", rev = "573d4ac192af1ec3eaa987d3a5819930f25b7a3d", default-features = false, features = ['framebuffer'] }
#libremarkable = { path = "../libremarkable", default-features = false, features = ['framebuffer'] }
rusttype = "0.8.2"
chrono = "0.4.19"
image = "0.23.14"
