[package]
authors = ["Sterling DeMille <sterlingdemille+github@gmail.com>"]
name = "encrusted-heart"
version = "1.1.0"
description = "A z-machine (interpreter) for Infocom-era text adventure games"
repository = "https://github.com/demille/encrusted"
readme = "README.md"
license = "MIT"
edition = "2015"

[dependencies]
base64 = "0.10.1"
enum_primitive = "0.1.1"
rand = "0.4.2"
serde = "1.0.88"
serde_derive = "1.0.88"
serde_json = "1.0.38"

[dev-dependencies]
regex = "1.1.0"
itertools = "0.10.1"
termion = "1.5.6"
clap = "2.32.0"
lazy_static = "1.2.0"