[package]
authors = ["Sterling DeMille <sterlingdemille+github@gmail.com>"]
name = "encrusted-heart"
version = "0.0.1"
description = "A z-machine (interpreter) for text adventure games"
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
base64 = "0.10.1"
num_enum = "0.5.6"
rand = "0.4.2"
serde = "1.0.88"
serde_derive = "1.0.88"
serde_json = "1.0.38"

[dev-dependencies]
regex = "1.1.0"
itertools = "0.10.1"
termion = "1.5.6"
clap = "2.32.0"
lazy_static = "1.2.0"